[gd_scene load_steps=7 format=2]

[ext_resource path="res://Hud/DoorHUD.png" type="Texture" id=1]
[ext_resource path="res://Wyprawa.gd" type="Script" id=2]
[ext_resource path="res://Hud/ExitArrowCook.png" type="Texture" id=3]
[ext_resource path="res://Styles/TloKuchenka.tres" type="StyleBox" id=4]
[ext_resource path="res://Styles/GuzikKuchenka_Wcisniety.tres" type="StyleBox" id=5]
[ext_resource path="res://Styles/GuzikKuchenka.tres" type="StyleBox" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Lewy" type="TextureButton" parent="Sprite"]
margin_left = -384.0
margin_top = -232.0
margin_right = -192.0
margin_bottom = -40.0
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Lewy"]
margin_top = 193.0
margin_right = 192.0
margin_bottom = 384.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Prawo" type="TextureButton" parent="Sprite"]
margin_left = 192.0
margin_top = -232.0
margin_right = 384.0
margin_bottom = -40.0
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Prawo"]
margin_top = 192.0
margin_right = 192.0
margin_bottom = 384.0
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="Exit" type="TextureButton" parent="Sprite"]
margin_left = 510.17
margin_top = -294.924
margin_right = 574.17
margin_bottom = -262.924
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wiadomosc" type="Panel" parent="Sprite"]
self_modulate = Color( 0.309804, 0.262745, 0.262745, 0.501961 )
margin_left = 640.0
margin_top = -360.0
margin_right = 1920.0
margin_bottom = 360.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="W" type="Panel" parent="Sprite/Wiadomosc"]
self_modulate = Color( 0.278431, 0.25098, 0.286275, 1 )
margin_left = 480.0
margin_top = 270.0
margin_right = 800.0
margin_bottom = 440.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Sprite/Wiadomosc/W"]
margin_left = 32.0
margin_top = 16.0
margin_right = 288.0
margin_bottom = 90.0
text = "Czy chesz skonczyc wyprawe i wrocic na statek?"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wroc" type="Button" parent="Sprite/Wiadomosc/W"]
margin_left = 32.0
margin_top = 90.0
margin_right = 160.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Wroc"

[node name="Zostan" type="Button" parent="Sprite/Wiadomosc/W"]
margin_left = 160.0
margin_top = 90.0
margin_right = 288.0
margin_bottom = 164.0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
text = "Zostan"
[connection signal="pressed" from="Sprite/Lewy" to="." method="_on_Lewy_pressed"]
[connection signal="pressed" from="Sprite/Prawo" to="." method="_on_Prawo_pressed"]
[connection signal="pressed" from="Sprite/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Sprite/Wiadomosc/W/Wroc" to="." method="_on_Wroc_pressed"]
[connection signal="pressed" from="Sprite/Wiadomosc/W/Zostan" to="." method="_on_Zostan_pressed"]
